@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.eserial.cz"
        name="eserial.cz"
-       version="1.0.3"
+       version="1.0.4"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.3.7"/>
+    <import addon="script.module.stream.resolver" version="1.3.11"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
