@@ -58,7 +58,7 @@ class SledujuserialyContentProvider(ContentProvider):
         pattern = '<div style=\"background-image\: url\((?P<img>[^\)]+)[^<]+<a href=\"(?P<url>[^\"]+)[^<]+<img.+?title=\"(?P<name>[^\"]+)'
         for m in re.finditer(pattern, data, re.IGNORECASE | re.DOTALL):
             item = self.video_item()
-            item['title'] = m.group('name').decode('windows-1250').encode('utf-8')
+            item['title'] = util.decode_html(m.group('name').decode('windows-1250').encode('utf-8'))
             item['url'] = m.group('url')
             item['img'] = self._url(m.group('img'))
             self._filter(result,item)
