@@ -20,7 +20,7 @@
 # *
 # */
 import re,util,urllib2,traceback
-__name__ = 'zkouknito.cz'
+__name__ = 'sledujuserialy'
 def supports(url):
     return not _regex(url) == None
 
@@ -29,13 +29,15 @@ def resolve(url):
     if not m == None:
         data = util.request(url)
         if data.find('jwplayer(\'mediaplayer') > 0:
-            video = re.search('\'file\'\: \'(?P<url>.+?[flv|mp4])',data)
+            video = re.search('\'file\'\: \'(?P<url>.+?[flv|mp4])\'',data)
             if video:
+                
                 item = {}
                 item['url'] = video.group('url')
                 subs = re.search('\'file\'\: \'(?P<url>.+?srt)',data)
                 if subs:
                     item['subs'] = _furl(subs.group('url'))
+                print item
                 return [item]
 
 def _furl(url):
