@@ -22,6 +22,7 @@
 import os, re, sys, urllib, urllib2, traceback, cookielib, time, socket
 from htmlentitydefs import name2codepoint as n2cp
 import simplejson as json
+import util
 UA = 'Mozilla/6.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.0.5) Gecko/2008092417 Firefox/3.0.3'
 from Plugins.Extensions.archivCZSK.engine import client
 from Plugins.Extensions.archivCZSK.archivczsk import ArchivCZSK
@@ -111,54 +112,54 @@ def error(text):
         client.debug(text)
 
 
-def get_searches(addon,server):
+def get_searches(addon, server):
         local = addon.get_info('profile')
         if not os.path.exists(local):
                 os.makedirs(local)
-        local = os.path.join(local,server)
+        local = os.path.join(local, server)
         if not os.path.exists(local):
                 return []
-        f = open(local,'r')
+        f = open(local, 'r')
         data = f.read()
-        searches = json.loads(data.decode('utf-8','ignore'))
+        searches = json.loads(data.decode('utf-8', 'ignore'))
         f.close()
         return searches
 
-def add_search(addon,server,search,maximum):
+def add_search(addon, server, search, maximum):
         searches = []
         local = addon.get_info('profile')
         if not os.path.exists(local):
                 os.makedirs(local)
-        local = os.path.join(local,server)
+        local = os.path.join(local, server)
         if os.path.exists(local):
-                f = open(local,'r')
+                f = open(local, 'r')
                 data = f.read()
-                searches = json.loads(data.decode('utf-8','ignore'))
+                searches = json.loads(data.decode('utf-8', 'ignore'))
                 f.close()
         if search in searches:
                 searches.remove(search)
-        searches.insert(0,search)
-        remove = len(searches)-maximum
-        if remove>0:
+        searches.insert(0, search)
+        remove = len(searches) - maximum
+        if remove > 0:
                 for i in range(remove):
                         searches.pop()
-        f = open(local,'w')
-        f.write(json.dumps(searches,ensure_ascii=True))
+        f = open(local, 'w')
+        f.write(json.dumps(searches, ensure_ascii=True))
         f.close()
 
-def remove_search(addon,server,search):
+def remove_search(addon, server, search):
         local = addon.get_info('profile')
         if not os.path.exists(local):
                 return
-        local = os.path.join(local,server)
+        local = os.path.join(local, server)
         if os.path.exists(local):
-                f = open(local,'r')
+                f = open(local, 'r')
                 data = f.read()
-                searches = json.loads(data.decode('utf-8','ignore'))
+                searches = json.loads(data.decode('utf-8', 'ignore'))
                 f.close()
                 searches.remove(search)
-                f = open(local,'w')
-                f.write(json.dumps(searches,ensure_ascii=True))
+                f = open(local, 'w')
+                f.write(json.dumps(searches, ensure_ascii=True))
                 f.close()
 
    
